# banana-create-edit

./: .cursorignore  .dockerignore  .env.example  .gitignore  CODING_GUIDES_py_fastapi.md  README.md  TASK_python_gemini-nano-banana_image-create-edit_0_IDEA.md  TASK_python_gemini-nano-banana_image-create-edit_1_PLAN.md  pyproject.toml
src/image_generator/: generator.py  main.py
